Provide cmds as arrays